# drv_dsl_cpe_api_vrx

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.in
build_vxworks/: drv_dsl_cpe_api.wpj
doc/: doxyconfig.vrx  dsl_cpe_api.h  footer.html  header.html
doc/html/: stylesheet.css
scripts/: inst_drv_dsl_cpe_api_vrx.sh
src/: Makefile  Makefile.am  Makefile.in  envir.subdirs.mak
src/bnd/: drv_dsl_cpe_api_bnd.c  drv_dsl_cpe_api_bnd_vrx.c
src/ceoc/: drv_dsl_cpe_ceoc.c  drv_dsl_cpe_intern_ceoc.c  drv_dsl_cpe_vrx_ceoc.c
src/common/: drv_dsl_cpe_api.c  drv_dsl_cpe_autoboot.c  drv_dsl_cpe_debug.c  drv_dsl_cpe_fifo.c  drv_dsl_cpe_os_linux.c  drv_dsl_cpe_os_rtems.c  drv_dsl_cpe_os_vxworks.c  drv_dsl_cpe_timeout.c
src/device/: drv_dsl_cpe_device_vrx.c  drv_dsl_cpe_device_vxx.c  drv_dsl_cpe_msg_vrx.c
src/g997/: drv_dsl_cpe_api_g997.c  drv_dsl_cpe_api_g997_vrx.c
src/include/: drv_dsl_cpe_api.h  drv_dsl_cpe_api_adslmib.h  drv_dsl_cpe_api_adslmib_ioctl.h  drv_dsl_cpe_api_bnd.h  drv_dsl_cpe_api_bnd_vrx.h  drv_dsl_cpe_api_ceoc.h  drv_dsl_cpe_api_ceoc_intern.h  drv_dsl_cpe_api_config.h  drv_dsl_cpe_api_config.h.in  drv_dsl_cpe_api_error.h  drv_dsl_cpe_api_g997.h  drv_dsl_cpe_api_ioctl.h  drv_dsl_cpe_api_pm.h  drv_dsl_cpe_api_sar.h  drv_dsl_cpe_api_types.h  drv_dsl_cpe_autoboot.h  drv_dsl_cpe_debug.h  drv_dsl_cpe_device.h  drv_dsl_cpe_device_ceoc.h  drv_dsl_cpe_device_g997.h  drv_dsl_cpe_device_pm.h  drv_dsl_cpe_device_vrx.h  drv_dsl_cpe_device_vxx.h  drv_dsl_cpe_fifo.h  drv_dsl_cpe_intern.h  drv_dsl_cpe_intern_ceoc.h  drv_dsl_cpe_intern_g997.h  drv_dsl_cpe_intern_led.h  drv_dsl_cpe_intern_mib.h  drv_dsl_cpe_intern_pm.h  drv_dsl_cpe_intern_sar.h  drv_dsl_cpe_msg_vrx.h  drv_dsl_cpe_os.h  drv_dsl_cpe_os_lint_map.h  drv_dsl_cpe_os_linux.h  drv_dsl_cpe_os_rtems.h  drv_dsl_cpe_os_vxworks.h  drv_dsl_cpe_os_win32.h  drv_dsl_cpe_pm_core.h  drv_dsl_cpe_procfs_linux.h  (+10 more)
src/led/: drv_dsl_cpe_led.c
src/mib/: drv_dsl_cpe_adslmib.c
src/pm/: drv_dsl_cpe_api_pm.c  drv_dsl_cpe_api_pm_vrx.c  drv_dsl_cpe_pm_core.c
src/sar/: drv_dsl_cpe_sar.c
